Añadir funcionalidades para la gestión del perfil de usuario y soporte para CSRF

--- a/src/main/resources/mensajes.properties
+++ b/src/main/resources/mensajes.properties
@@ -17,4 +17,5 @@ label.alumno.nombre=Nombre
 # Barra de navegación
 nav.home=Inicio
 nav.login=Conexión
+nav.logout=Cerrar Sesión
 nav.new.alumnos=Nuevo Alumno
